# fastapi-postgresql-version

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: config.py  lifespan.py  main.py  requests.py
tests/: conftest.py  mixins.py  test_api.py
